# wolfden-algos

./: .gitignore  CHANGELOG.md  guide.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
algo_runtime/: requirements.base.txt  runner.py  wolf_types.py
algo_runtime/examples/: cvd_divergence.py  ema_cross.py  prev_candle_breakout.py  scalper.py  sma_crossover.py
docs/: prd-ai-terminal.md
ninjatrader/: WolfDenBridge.cs
plans/: ai-terminal.md
prototypes/editor-view/: _shared.css  _shared.js  index.html  variant-a-minimal.html  variant-b-workspace.html  variant-c-focus.html
scripts/: download-python.ps1  download-python.sh  release.mjs
src/: App.tsx  guide-main.tsx  main.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_terminal.rs  commands.rs  db.rs  lib.rs  process_manager.rs  types.rs  venv_manager.rs  websocket_server.rs  zmq_hub.rs
src/components/: AiTerminalPanel.tsx  AlgoDetailPanel.tsx  AlgoEditor.tsx  AlgoGroupHeader.tsx  AlgoInstanceRow.tsx  AlgoManager.tsx  AlgosCommandBar.tsx  AlgosFilterBar.tsx  AlgosInstanceList.tsx  AnalyticsTab.tsx  BreakdownTable.tsx  ConfirmDialog.tsx  Dashboard.tsx  EditorStatusBar.tsx  EditorTabs.tsx  EquityChart.tsx  ErrorBoundary.tsx  LiveShadowDelta.tsx  LiveTab.tsx  LogPanel.tsx  OrderTape.tsx  PerformanceTab.tsx  PositionCard.tsx  RenameDialog.tsx  RiskSummary.tsx  RollingMetricsChart.tsx  RoundtripsTable.tsx  RunAlgoSlideOver.tsx  Sidebar.tsx  (+10 more)
(+40 files in other folders)
