[package]
name = "wolf-den"
version = "0.1.0"
description = "High-performance algo trading desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

# WebSocket server (for NinjaTrader connections)
tokio-tungstenite = "0.26"
futures-util = "0.3"

# SQLite
rusqlite = { version = "0.34", features = ["bundled"] }

# ZeroMQ for IPC with Python algo processes
zeromq = "0.4"

# Logging
log = "0.4"

# Unique IDs for orders
uuid = { version = "1", features = ["v4"] }

# Byte buffers (used by ZMQ messages)
bytes = "1"

# PTY for AI terminal (Claude Code)
portable-pty = "0.8"

# File watching for AI terminal → DB sync
notify = "7"

# Hashing for dependency change detection
sha2 = "0.10"

# Unix signal handling for graceful process shutdown
[target.'cfg(unix)'.dependencies]
libc = "0.2"
